--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-maps": "0.31.1",
-    "react-router-native": "^5.3.4"
+    "react-router-native": "^5.3.4",
+    "expo-location": "~14.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
